Update quiz button description in index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4 max-w-4xl mx-auto">
                 <button onclick="startQuiz('term-to-meaning')" class="glass-card p-6 rounded-2xl hover:bg-slate-800 transition-all text-left active-press">
                     <div class="text-lg font-bold mb-2">用語 → 意味</div>
-                    <p class="text-slate-400 text-xs">定義の暗記に最適。</p>
+                    <p class="text-slate-400 text-xs">！！期末テスト出題形式！！</p>
                 </button>
                 <button onclick="startQuiz('meaning-to-term')" class="glass-card p-6 rounded-2xl hover:bg-slate-800 transition-all text-left active-press">
                     <div class="text-lg font-bold mb-2">意味 → 用語</div>
